# simple-RAG

./: .gitignore  README.md  pyproject.toml  repomix-output.xml
configs/: config.yaml
configs/chunker/: recursive.yaml
configs/dataset/: hotpot_mini.yaml
configs/experiments/: canonical.yaml
configs/generator/: echo.yaml
configs/indexer/: inmemory.yaml
configs/prompts/: base.yaml
configs/retriever/: bm25.yaml
eval/: batch_eval.py
indexing/embedding_server/: download.sh  spin.sh  test.sh
public/: docs.md
rag_lab/adapters/chunkers/: recursive.py
rag_lab/adapters/datasets/: hotpot_mini.py
rag_lab/adapters/evaluators/: ir.py
rag_lab/adapters/generators/: echo.py
rag_lab/adapters/indexers/: inmemory.py
rag_lab/adapters/rerankers/: none.py
rag_lab/adapters/retrievers/: bm25.py
rag_lab/cli/: run.py
rag_lab/contracts/: dataset.py  document.py  eval.py  generation.py  hit.py  index.py  pipeline.py  query.py
rag_lab/core/: IChunker.py  IEvaluator.py  IGenerator.py  IIndexer.py  IQueryTransform.py  IReranker.py  IRetrievers.py  dataset.py
rag_lab/pipeline/: registry.py  runner.py  spans.py
