[project]
authors = [{name = "dinhtruongng", email = "tonytruong23305@gmail.com"}]
dependencies = []
name = "simple-RAG"
requires-python = "== 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
simple_rag = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
openai = ">=1.102.0,<2"
ragas = ">=0.3.2,<0.4"
hydra-core = ">=1.3.2,<2"
